# agents

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  run_agent.sh
acp_server/: __init__.py  __main__.py  agent.py  auto_model.py  ci_middleware.py  model_config.py  slash_commands.py
skills/changeset-generator/: SKILL.md
skills/ci-reviewer/: SKILL.md
skills/ci-reviewer/references/: check-types.md  gh-commands.md
skills/ci-reviewer/workflows/: review-pr-ci.md
skills/cluster/: SKILL.md  cluster.ts  index.ts  utils.ts
skills/code-design/: SKILL.md
skills/eval-creator/: SKILL.md
skills/pr-description-generator/: SKILL.md
skills/typescript-best-practices/: SKILL.md
skills/typescript-best-practices/references/: advanced-types-playbook.md  compiler-and-project-diagnostics.md  tsconfig-strict.example.json
skills/typescript-bootstrap/: SKILL.md
skills/typescript-bootstrap/addons/: README.md
skills/typescript-bootstrap/addons/changesets/: INSTALL.md  release.yml  releasing.md
skills/typescript-bootstrap/addons/ci/: INSTALL.md
skills/typescript-bootstrap/addons/ci-environments/: INSTALL.md  vitest.environments.config.ts
skills/typescript-bootstrap/addons/examples/: INSTALL.md
skills/typescript-bootstrap/addons/knip/: INSTALL.md  knip.monorepo.json  knip.single.json
skills/typescript-bootstrap/references/: repo-root.md  stack-rationale.md
skills/typescript-bootstrap/templates/: README.templates.md  typedoc.json
skills/typescript-bootstrap/workflows/: bootstrap-project.md
tests/: test_model_switching.py
(+29 files in other folders)
